# MPF_knapsack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  copa_kernels.cl
example/: test.cpp
src/: CMakeLists.txt  knapsack_sequential.cpp  knapsack_sequential_tls.cpp
src/common/: Data.hpp  DataGenerator.hpp  Timer.hpp  VariadicTable.hpp
src/parallel-copa/: AlignedInt.hpp  CLKernels.hpp  CMakeLists.txt  IntelCPUParallelCopa.cpp  IntelCPUParallelCopa.hpp  Pair.hpp  ParallelCopaBase.hpp  Quad.hpp  Triple.hpp  Utils.cpp  Utils.hpp  copa_kernels.cl  parallel_copa.cpp
src/sequential/: CMakeLists.txt  knapsack_sequential.cpp  knapsack_sequential_tls.cpp
